--- a/main.html
+++ b/main.html
@@ -13,14 +13,15 @@
 	  </section>
 	  <section id='right'>
 		  <form>
-			  <label for='email'>Email</label>
+			  <label for='email'></label>
 			  <input type='text' id='email' placeholder='Email address or phone number'>
 			  <label for='password'></label>
 			  <input type='password' id='password' placeholder='Password'>
 			  <button type='submit'>Log in</button>
-			  <a href=''>Forgotten account</a>
+			  <a href=''>Forgotten account?</a>
+			  <button class='signup'>Create new account</button>
 		  </form>
-		  <button class='signup'>Create new account</button>
+		  
 	  </section>
   </body>
 </html>
