--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	  <section id='left'>
 		  <div class='one'></div>
 		  <div class='one'></div>
-		  <img class='left-img'src='https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg'
+		  <img src='https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg'
 		  <p>Facebook helps you connect and share with the people in your life.</p>
 		  
 	  </section>
