--- a/main.html
+++ b/main.html
@@ -4,14 +4,14 @@
   </head>
   <body>
     <!-- Write your code here -->
-	  <section id='left'>
+	  <section class='left'>
 		  <div class='one'></div>
 		  <div class='one'></div>
 		  <img src='https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg'
 		  <p>Facebook helps you connect and share with the people in your life.</p>
 		  
 	  </section>
-	  <section id='right'>
+	  <section class='right'>
 		  <form>
 			  <label for='email'></label>
 			  <input type='text' id='email' placeholder='Email address or phone number'>
